# mc-rtc-unity

./: README.md
Project/: .gitignore
Project/Assets/: McRtcClient.cs  McRtcRobot.cs  McRtcWindow.cs
Project/Assets/McRtc/: ArrayInput.cs  BakedTransformation.cs  Checkbox.cs  Client.cs  Element.cs  NumberInput.cs  Robot.cs  Tag.cs  Trajectory.cs  TransformElement.cs
Project/Assets/McRtc/Editor/: ArrayInput_Editor.cs  Checkbox_Editor.cs  Client_Editor.cs  Element_Editor.cs  NumberInput_Editor.cs
Project/Assets/Scenes/: SampleScene.unity
Project/ProjectSettings/: ProjectSettings.asset
plugin/: CMakeLists.txt
plugin/src/: callbacks.h  generate_client.cpp  plugin.cpp  requests.h  test_plugin.cpp  types.in.h
